alignmnt fixed whatsapp icon

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ html {
 @media (max-width: 768px ) and (max-width: 912px ) {
   .WhatsApp > img {
     bottom: 35px !important;
-    right: 15px;
+    right: 35px;
     width: 60px;
     height: 60px;
   }
@@ -90,7 +90,7 @@ html {
 @media (max-width: 576px) {
   .WhatsApp > img {
     margin-bottom: 50px !important;
-    right: 10px;
+    margin-right: 40px;
     width: 60px;
     height: 60px;
   }
